--- a/Documentation/doc/biblio/cgal_manual.bib
+++ b/Documentation/doc/biblio/cgal_manual.bib
@@ -3127,6 +3127,17 @@ pages = "207--221"
   year={2012},
   organization={Wiley Online Library}
 }
+
+@article{cgal:bc:jlw-ggcccsp-07, 
+  title={A general geometric construction of coordinates in a convex simplicial polytope}, 
+  volume={24}, 
+  DOI={10.1016/j.cagd.2006.12.001}, 
+  number={3}, 
+  journal={Computer Aided Geometric Design}, 
+  author={Ju, Tao and Liepa, Peter and Warren, Joe}, 
+  year={2007}, 
+  pages={161–178}
+}
 % ----------------------------------------------------------------------------
 % END OF BIBFILE
 % ----------------------------------------------------------------------------
