--- a/Boolean_set_operations_2/demo/Boolean_set_operations_2/todo.txt
+++ b/Boolean_set_operations_2/demo/Boolean_set_operations_2/todo.txt
@@ -1,4 +1,6 @@
 Bugs related to polyline:-
-1. Complement operation bug :- On pressing the complement button the demo crashes. The exact line causing this has been identified but the cause is unknown
-2. Switch Error bug	     :- On switching between polyline and any other type of polygon a crash occurs. This occurs becuase of a bad alloc or double free i.e the pointer pointing to polyline polygon 					has been freed twice. Exactly what line is causing this error is unknown
-3. Read File bug 	     :- The save operation has been successful however when I try to read the polygon the demo crashes. Cause has not been identified but the reason has been identified.
+1. Switch Error bug	     :- On switching between polyline and any other type of polygon a crash occurs.
+                            This occurs because of a bad alloc or double free that is the pointer pointing to polyline polygon has been freed twice.
+                            Exactly what line is causing this error is unknown.
+2. Read File bug 	     :- The save operation has been successful however when I try to read the polygon the demo crashes.
+                            Cause has not been identified but the reason has been identified.
